--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                  <h1>NuCamp</h1>
                  <h2>a better way to camp</h2>
              </div>
+             <div class="col-md-4 col-xl-2 mt-4">
+                <a href="#reserveForm"><button type="button" class="btn btn-info btn-lg">Reserve Campsite</button></a>
+             </div>
             </div>
         </div>
     </header>
@@ -73,8 +76,13 @@
                 <h2>Featured Campsites</h2>
             </div>
             <div class="col">
-                <h3>React Lake Campground</h3>
-        		<p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                <div class="media">
+                        <img class="d-flex ml-3 img-thumbnail order-sm-last " src="img/react-lake-thumb.jpg" alt="React lake" />
+                    <div class="media-body align-self-center">
+                        <h3>React Lake Campground</h3>
+                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                    </div>
+                </div>
    			</div>
         </div>
 
@@ -92,6 +100,46 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-sm-6 mx-auto">
+                <div class="card border ">
+                    <div class="card bg-info text-white">
+                        <h3 class="card-header">Reserve a Campsite</h3>
+                    </div>
+                        <div class="card-body">
+                            <form id="reserveForm">
+                                <div class="form-group row">
+                                    <label for="numCampers" class="col-sm-6 col-form-label">Number of Campers
+                                    </label>
+                                        <div class="col">
+                                            <select name="numCampers" id="numCampers" class="form-control">
+                                            <option selected>Select...</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                            </select>
+                                        </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="date" class="col-sm-6 col-form-label ">Date</label>
+                                        <div class="col-sm-6">
+                                            <input type="date" class="form-control" id="date" name="date" placeholder="mm/dd/yyyy">
+                                        </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col">
+                                    <button type="submit" class="btn btn-primary">Search</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+             </div>
+        </div>
     </div>
 
     <footer class="site-footer">
@@ -118,6 +166,7 @@
             	<a role="button" a class="btn btn-link" href:mailto:campsites@nucamp.co><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>                
            </div>
+        
         </div>
     </footer>
        <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
@@ -127,6 +176,5 @@
    
    </body>
 
-</body>
 
 </html>
