--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div col="col-4 col-sm-3 col-md-2 align-self-center">  
-                <img src="img/logo.png" class="img-fluid">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">  
+                <img src="img/logo.png" class="img-fluid" alt="nucamp Logo">
                 </div>
              <div class="col">
                  <h1>NuCamp</h1>
                  <h2>a better way to camp</h2>
              </div>
              <div class="col-md-4 col-xl-2 mt-4">
-                <a href="#reserveForm"><button type="button" class="btn btn-info btn-lg">Reserve Campsite</button></a>
+                <a role="button" href="#reserveForm"  type="button" class="btn btn-info btn-lg" alt="Reserve Form">Reserve Campsite</a>
              </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
        <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" />
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" alt="nucamp Logo" />
             </a>           
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br>
-            	<a role="button" a class="btn btn-link" href:mailto:campsites@nucamp.co><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+            	<a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>                
            </div>
         
