--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div col="col-4 col-sm-3 col-md-2 align-self-center">  
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">  
                     <a href="index.html"><img src="img/logo.png" class="img-fluid"></a>
                 </div>
                  <div class="col">
@@ -34,7 +34,7 @@
     
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
            <div class="container">
-               <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>  
+               <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" alt="Nucamp Logo"/></a>  
              <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
              <span class="navbar-toggler-icon"></span>
              </button>
