Contact Us after Validator run

--- a/contactus.html
+++ b/contactus.html
@@ -23,8 +23,8 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div col="col-4 col-sm-3 col-md-2 align-self-center">  
-                    <a href="index.html"><img src="img/logo.png" class="img-fluid"></a>
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">  
+                    <a href="index.html"><img src="img/logo.png" class="img-fluid" alt="Nucamp Logo"></a>
                     </div>
                  <div class="col">
                      <h1>NuCamp</h1>
@@ -36,7 +36,7 @@
     
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
            <div class="container">
-               <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>  
+               <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" alt="Nucamp Logo"/></a>  
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -74,7 +74,7 @@
             </div>
             <div class="col">
 				<a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br>
-            	<a role="button" a class="btn btn-link" href:mailto:campsites@nucamp.co><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+            	<a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
             </div>
         </div>
 
