--- a/index-ChangeUp-Code-Chllgne.html
+++ b/index-ChangeUp-Code-Chllgne.html
@@ -15,8 +15,12 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
         <link rel="stylesheet" href="css/styles.css" />
         <title>NuCamp: A Better Way To Camp</title>
-    </head>
-
+        <style>
+            body {
+                background-color:whitesmoke ;
+            }
+</style>   
+</head>
 <body>
 
     <header class="jumbotron jumbotron-fluid">
@@ -30,7 +34,7 @@
                  <h2>a better way to camp</h2>
              </div>
              <div class="col-md-4 col-xl-2 mt-4">
-                <a href="#reserveform" role="button"  class="btn btn-lg btn-info" data-placement="bottom" data-html="true" data-toggle="tooltip" title="Or call us at <br/> <strong> 1-206-555-1234</strong>"  >Reserve Campsite</a>
+                <a href="#reserveform" role="button"  class="btn btn-lg btn-info" data-placement="bottom" data-html="true" data-toggle="tooltip" title="Or call us at <br/> <strong> 1-206-555-1234</strong>">Reserve Campsite</a>
              </div>
             </div>
         </div>
@@ -136,59 +140,47 @@
                             <span class="carousel-control-next-icon"></span>
                             <span class="sr-only">Next</span>
                         </a>
-                    </div>                </div>
-            </div>
-        </div>
-
-
-
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 order-sm-last col-md-3">
-                <h2 class="text-sm-right">Discover & Review</h2>
-            </div>
-        
-            <div class="col">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail" />
-                    <div class="media-body align-self-center">
-                        <h3>Our Campsites</h3>
-                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
-                <h2>Featured Campsites</h2>
+        <div class="row row-content ">
+        <div class="card-group card-columns">
+            <div class="card card-bkgrnd-purple text-white">
+              <img class="card-img-top"  src="img/breadcrumb-trail.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Our Campsites</h5>
+                <p class="card-text">Explore our growing database of curated campsites and leave your own reviews!</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-light">Read More...</small>
+              </div>
             </div>
-            <div class="col">
-                <div class="media">
-                        <img class="d-flex ml-3 img-thumbnail order-sm-last " src="img/react-lake-thumb.jpg" alt="React lake" />
-                    <div class="media-body align-self-center">
-                        <h3>React Lake Campground</h3>
-                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
-                    </div>
+            <div class="card card-bkgrnd-lav text-white">
+              <img class="card-img-top" src="img/chrome-river.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Featured Campsites</h5>
+                <p class="card-text"><SPAN STYLE="text-transform: uppercase; font-weight: bold;" >React Lake Campground.</SPAN> Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-light">Read More...</small>
+              </div>
+            </div>
+            <div class="card card-bkgrnd-purple text-white">
+              <img class="card-img-top" src="img/react-lake.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Bootstrap Outfitters</h5>
+                <p class="card-text">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
                 </div>
-   			</div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 order-sm-last col-md-3">
-                <h2 class="text-sm-right">Our Community Partners</h2>
+                <div class="card-footer">
+                    <small class="text-light">Read More...</small>
+                  </div>
             </div>
-
-            <div class="col">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
-                    <div class="media-body align-self-center">
-                        <h3>Bootstrap Outfitters</h3>
-        				<p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
     </div>
+
     
         <div class="row row-content ">
             <div class="col-sm-6 mx-auto">
@@ -229,10 +221,8 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
 
-    <footer class="site-footer">
+    <footer class="site-footer bg-secondary text-white">
         <div class="container">
             <div class="row">             
                 <div class="col-4 col-sm-2 offset-1">
@@ -251,9 +241,9 @@
                     <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
                     <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br>
-            	    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                <div class="col-sm-4 text-center ">
+                    <a role="button" class="btn btn-link text-white" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br>
+            	    <a role="button" class="btn btn-link text-white" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>                
            </div>
         </div>
