--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                  <h2>a better way to camp</h2>
              </div>
              <div class="col-md-4 col-xl-2 mt-4">
-                <a href="#reserveform" role="button"  class="btn btn-lg btn-info" data-placement="bottom" data-html="true" data-toggle="tooltip" title="Or call us at <br/> <strong> 1-206-555-1234</strong>"  >Reserve Campsite</a>
+                <a href="#reserveform" role="button"  class="btn btn-lg btn-info" data-placement="bottom" data-html="true" data-toggle="" title="Or call us at <br/> <strong> 1-206-555-1234</strong>"  >Reserve Campsite</a>
              </div>
             </div>
         </div>
@@ -190,45 +190,7 @@
         </div>
     </div>
     
-        <div class="row row-content ">
-            <div class="col-sm-6 mx-auto">
-                <div class="card border ">
-                    <div class="card bg-info text-white">
-                        <h3 class="card-header">Reserve a Campsite</h3>
-                    </div>
-                        <div class="card-body">
-                            <form id="reserveForm">
-                                <div class="form-group row">
-                                    <label for="numCampers" class="col-sm-6 col-form-label">Number of Campers
-                                    </label>
-                                        <div class="col">
-                                            <select name="numCampers" id="numCampers" class="form-control">
-                                            <option selected>Select...</option>
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
-                                            </select>
-                                        </div>
-                                </div>
-                                <div class="form-group row">
-                                    <label for="date" class="col-sm-6 col-form-label ">Date</label>
-                                        <div class="col-sm-6">
-                                            <input type="date" class="form-control" id="date" name="date" placeholder="mm/dd/yyyy">
-                                        </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col">
-                                    <button type="submit" class="btn btn-primary">Search</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                </div>
-            </div>
-        </div>
+   
     </div>
 </div>
 
@@ -263,10 +225,10 @@
        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-       <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script>
+       <!-- <script> -->
+        <!-- $(function () { -->
+            <!-- $('[data-toggle="tooltip"]').tooltip() -->
+        <!-- }) -->
+    <!-- </script> -->
       </body>
 </html>
