--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                                     
                             </div>
                             <div class="form-group row">
-                                <label for="date" class="col-sm-6 col-form-label ">Campsite Type</label>
+                                <label for="campsiteType" class="col-sm-6 col-form-label ">Campsite Type</label>
                                 <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
                                     <label class="btn btn-success active">
-                                      <input type="radio" name="options" id="option1" autocomplete="off" checked> Tent
+                                      <input type="radio" name="options" id="option1" > Tent
                                     </label>
                                     <label class="btn btn-primary">
-                                      <input type="radio" name="options" id="option2" autocomplete="off"> RV
+                                      <input type="radio" name="options" id="option2" > RV
                                     </label>
                                  
                                   </div>
@@ -291,8 +291,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+
 
     <footer class="site-footer">
         <div class="container">
